--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/chepowel/DonationForm#readme",
   "name": "DonationForm",
   "version": "1.0.0",
   "description": "Donation Form in React",
@@ -16,7 +17,6 @@
   "bugs": {
     "url": "https://github.com/chepowel/DonationForm/issues"
   },
-  "homepage": "https://github.com/chepowel/DonationForm#readme",
   "dependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
@@ -28,6 +28,10 @@
     "webpack-cli": "^3.3.12"
   },
   "babel": {
-    "presets": ["@babel/preset-env", "@babel/preset-react"]
-  }
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
+  "devDependencies": {}
 }
